--- a/Content/algorithm/프로그래머스 - 상호평가.md
+++ b/Content/algorithm/프로그래머스 - 상호평가.md
@@ -11,50 +11,31 @@ tags: Algorithm, Programmers
 [문제 링크](https://programmers.co.kr/learn/courses/30/lessons/83201)
 
 ## 문제 해결 순서
-1. 조규현의 좌표를 기준으로 류재명이 있을 수 있는 점을 쭉 이어 그리면 하나의 원이 된다.
-2. 마찬가지로 백승환의 좌표를 기준으로 류재명이 있을 수 있는 점을 쭉 이어 그리면 하나의 원이 된다.
-3. 그럼 두 원의 접점이 류재명이 있을 수 있는 위치가 된다.
-4. 6가지의 경우의 수로 나눠 계산했다. <b>(주석 참고)</b>
+1. x, y 좌표를 저장할 front, back 배열을 선언.
+2. 반복문을 돌며 arr[i][0]번째를 front에, arr[i][1]번째를 back에 저장하는데 이미 있는 값이면 해당 값을 제거하고 저장하지 않는다.
+3. 직사각형이 되려면 같은 좌표가 2개씩 있어야 한다는 점을 이용. `ex) [1, 3] [1, 6] [4, 3] [4, 6] -> 1 두개, 3 두개, 6 두개, 4 두개`
 
 ```swift
 import Foundation
 
-func solution(_ scores:[[Int]]) -> String {
-    var answer = ""
-    var temp: [Int] = []
-    for i in 0 ..< scores.count {
-        for j in 0 ..< scores[i].count {
-            temp.append(scores[j][i])
+func solution(_ v: [[Int]]) -> [Int]
+{   
+    var front: [Int] = []
+    var back: [Int] = []
+    for i in v {
+        if !front.contains(i[0]) {
+            front.append(i[0])
         }
-        
-        for _ in 0 ..< temp.count{
-            if temp.max() == scores[i][i] || temp.min() == scores[i][i] {
-                if temp.firstIndex(of: scores[i][i]) == i  && temp.lastIndex(of: scores[i][i]) == i{
-                    temp.remove(at: i)
-                    break
-                }
-            }
+        else{
+            front.remove(at: front.firstIndex(of: i[0])!)
         }
-        var sum = 0
-        for k in 0 ..< temp.count{
-            sum += temp[k]
+        if !back.contains(i[1]) {
+            back.append(i[1])
         }
-        let average = sum / temp.count
-        
-        switch average {
-        case 90...100:
-            answer += "A"
-        case 80...90:
-            answer += "B"
-        case 70...80:
-            answer += "C"
-        case 50...70:
-            answer += "D"
-        default:
-            answer += "F"
+        else{
+            back.remove(at: back.firstIndex(of: i[1])!)
         }
-        temp = []
     }
-    return answer
+    return front + back
 }
 ```
